*** empty log message ***

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-09  Andras Varga 
 
+	* cexception.h: added storage of module class name (NED type name)
+
+2004-02-09  Andras Varga 
+
 	* ctypes.h: added methods to cModuleInterface so that it's possible
 	to dynamically assemble it (needed by networkbuilder)
 
