--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-10  Andras Varga 
+
+	* cexception.cc: added storage of module class name (NED type name)
+
 2004-02-09  Andras Varga 
 
 	* ctypes.cc: added methods to cModuleInterface so that it's possible
