--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,6 +1,11 @@
 FIXME todo: print event banner when simulation stops (esp with express mode),
 otherwise one doesn't know duration and event number!
 
+2004-02-11  Andras Varga 
+
+	* cmdenv.cc: propagated semantic change in getNextEvent()'s and
+	selectNextModule()'s return value (see include/ChangeLog)
+
 2004-02-05  Andras Varga
 
 	* heap.cc made disabled by default (and has to be explicitly enabled 
