--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-03  Andras Varga
+
+	* opp_msgc: uses cPolymorphic as default base class for classes.
+	(There was no default base class before.) Using cPolymorphic for base 
+	class enables the class to be registered (Register_Class()), and
+	doesn't cost anything because cPolymorphic has no data members only 
+	vptr, and opp_msgc-generated classes have vptr anyway (as some methods
+	are virtual.)
+
 2004-03-01  Andras Varga
 
 	* opp_msgc: added omitGetVerb boolean property. If turned on, generates
