--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-03  Andras Varga
+
+	* modinsp2.tcl, etc: implemented option to display className() of 
+	animated messages. New omnetpp.ini option: 
+          [Tkenv]/animation-msgclassnames=true/false (default is true)
+
 2004-03-01  Andras Varga
 
 	* inspector.tcl/cc, etc: all inspector windows got an "Inspect owner"
