--omnetpp-3.0a2 released-- line added to ChangeLog by _scripts/tag

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-03-01  Andras Varga
 
 	* ctypes.h,macros.h: createOne() return value changed from void* to
