--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-03-03  Andras Varga
 
 	* opp_msgc: uses cPolymorphic as default base class for classes.
