--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-02-20  Andras Varga
 
 	* cppgenerator.cc: implemented cChannel && cChannelType; several
