--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-03-03  Andras Varga
 
 	* added "Default style" in Gnuplot options dialog; user interface 
