--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-02-10  Andras Varga
 
 	* cnednetworkbuilder.cc: support for multiple conditional gatesizes and
