--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-03-01  Andras Varga
 
 	* classes cParsimCommunications, cCommBuffer, cParsimPartition, 
