--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-03  ------ omnetpp-3.0a2 released ------
+
 2004-03-03  Andras Varga
 
 	* modinsp2.tcl, etc: implemented option to display className() of 
