--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -8,6 +8,9 @@
 	Old target names also kept for compatibility but should not be used
 	any more.
 
+	* opp_nmakemake: some quirks fixed; used "exit /b 1" to return error
+	code (not good without /b!)
+
 2004-03-04  Andras Varga
 
 	* opp_makemake, opp_nmakemake: improved dealing with .msg files.
