--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,13 @@
+FIXME make inspectors more consistent:
+ObjectInspector's "info" page should appear also in ContainerInspector
+  (and maybe other inspectors as well)
+ObjectInspector (and all inspectors) should allow name change
+info() and detailedInfo() should appear in all inspectors somewhere
+cWatchInspector: if cPolymorphic is watched, display its info() and detailedInfo()
+
+FIXME cGate inspectors have now two "up" buttons!!!
+
+
 2004-03-03  ------ omnetpp-3.0a2 released ------
 
 2004-03-03  Andras Varga
@@ -15,8 +25,6 @@
 	* fix: Filtered Object List dialog ignored scheduled events list
 
 	* fix: cPacket inspector "Fields" page was always empty
-
-FIXME cGate inspectors have now two "up" buttons!!!
 
 2004-02-23  Andras Varga
 
