--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-10  Andras Varga
+
+	* cenvir.cc: updated to reflect changes in cenvir.h (see include/
+	ChangeLog)
+
+	* omnetapp.h: puts(const char *) replaced by sputn(const char *, int n)
+
 2004-03-03  ------ omnetpp-3.0a2 released ------
 
 2004-02-23  Andras Varga
