--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-18  Andras Varga
+
+	* opp_msgc: if a struct or class has operator<<, it is used for the
+	getFieldAsString() function (and will be displayed in Tkenv)
+
 2004-03-05  Andras Varga
 
 	* opp_msgc: remove output files (_m.cc,_m.h) if translation fails
