--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-20   Andras Varga
+
+	* ccommbuffer.h: moved here from src/sim/parsim.
+
 2004-03-10   Andras Varga
 
 	* cenvir.h: use std::ostream as base class for cEnvir. ev<< works 
