--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,6 +1,6 @@
 2004-03-20   Andras Varga
 
-	* ccommbuffer.h: moved here from src/sim/parsim.
+	* ccommbuffer.h, cparsimcomm.h: moved here from src/sim/parsim.
 
 2004-03-10   Andras Varga
 
