--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,6 @@
+FIXME todo: create parsim/ (and nedxml/?) subdirectories here
+std::string for info() and fullPath()
+
 2004-03-20   Andras Varga
 
 	* ccommbuffer.h, cparsimcomm.h: moved here from src/sim/parsim.
