--- a/src/sim/parsim/ChangeLog
+++ b/src/sim/parsim/ChangeLog
@@ -1,6 +1,6 @@
 2004-03-20  Andras Varga
 
-	* ccommbuffer.h: moved to include/
+	* ccommbuffer.h, cparsimcomm.h: moved to include/
 
 2004-03-03  ------ omnetpp-3.0a2 released ------
 
