--omnetpp-3.0a3 released-- line added to ChangeLog by _scripts/tag

--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 2004-03-03  ------ omnetpp-3.0a2 released ------
 
 Remaining issue: gate directions not observed in Conn Props dialog.
