--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 FIXME todo: create parsim/ (and nedxml/?) subdirectories here
 std::string for info() and fullPath()
 
