--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 2004-03-10  Andras Varga
 
 	* cenvir.cc: updated to reflect changes in cenvir.h (see include/
