--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 2004-03-18  Andras Varga
 
 	* opp_msgc: if a struct or class has operator<<, it is used for the
