--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 FIXME: input() with expression as default value is handled wrong
 
 2004-03-06  Andras Varga
