--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 FIXME make inspectors more consistent:
   ObjectInspector's "info" page should appear also in ContainerInspector (and maybe other inspectors as well)
   ObjectInspector (and all inspectors) should allow name change
