--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
 2004-03-05  Andras Varga
 
 	* opp_makemake: added --genconfig option which generates config file
