--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,13 +1,19 @@
-2004-03-22  ------ omnetpp-3.0a3 released ------
-
-2004-03-03  ------ omnetpp-3.0a2 released ------
-
 Remaining issue: gate directions not observed in Conn Props dialog.
 when submodule has random placement, strange thing happens after OK'ing Props dialog
 GNED not compatible with new Tkenv mode of using "i=" and "b=" together
 new Tkenv display string tags not supported yet
 internally, images must be named with "img:" prefix (otherwise exit.gif, 
 proc.gif etc will overwrite the exit, proc Tcl commands!)
+
+2004-03-23  Andras Varga
+	
+	* menuproc.tcl: bugfix: in the treeview, right click + Save always
+	saved the file of the currently open canvas, not the right-clicked one.
+	[reported by V.T.Nguyen]
+
+2004-03-22  ------ omnetpp-3.0a3 released ------
+
+2004-03-03  ------ omnetpp-3.0a2 released ------
 
 2004-02-22  Andras Varga
 
