*** empty log message ***

--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -9,6 +9,7 @@ FIXME make inspectors more consistent:
 FIXME cGate inspectors have now two "up" buttons!!!
 TBD there should be a limit on the number of inspector windows open, to prevent
 accidentally opening thousand windows with objects of identical names
+Need display string option to turn off module labels
 
 2004-03-18  Andras Varga
 
