--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -10,6 +10,7 @@ FIXME cGate inspectors have now two "up" buttons!!!
 TBD there should be a limit on the number of inspector windows open, to prevent
 accidentally opening thousand windows with objects of identical names
 Need display string option to turn off module labels
+TODO: need <Copy> icon on module output window toolbars
 
 2004-03-18  Andras Varga
 
