--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,9 +1,14 @@
+2004-04-14  Andras Varga
+
+	* neddoc.xsl: fixed bug which caused some interitance arrows to be 
+	drawn in reverse direction
+
 2004-03-22  ------ omnetpp-3.0a3 released ------
 
 2004-03-05  Andras Varga
 
 	* opp_makemake: added --genconfig option which generates config file
-	for which can be included by makefiles (see opp_makemake -c option).
+	which can be included by makefiles (see opp_makemake -c option).
 
 	* opp_makemake, opp_nmakemake: old targets "re-makemake" and 
 	"re-makemake-m" renamed to "makefiles" and "makefile-ins". 
