--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -11,6 +11,8 @@ TBD there should be a limit on the number of inspector windows open, to prevent
 accidentally opening thousand windows with objects of identical names
 Need display string option to turn off module labels
 TODO: need <Copy> icon on module output window toolbars
+TODO: treeview into eacgh object inspector!
+TODO: controlInfo page into cMessage inspector
 
 2004-03-18  Andras Varga
 
