--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -12,6 +12,7 @@ accidentally opening thousand windows with objects of identical names
 Need display string option to turn off module labels
 TODO: need <Copy> icon on module output window toolbars
 TODO: treeview into eacgh object inspector!
+TODO: BUSY cursor!!! at network setup, callfinish, etc
 
 2004-04-20  Andras Varga
 
