--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -15,6 +15,7 @@ TODO: treeview into eacgh object inspector!
 TODO: BUSY cursor!!! at network setup, callfinish, etc
 TODO: bubble(): show it in all ancestor modules too (maybe text prefixed with
       submodule name)
+FIXME: "t=one\ntwo\nthree" doesn't work as expected! (prints literal "\n")
 
 2004-04-20  Andras Varga
 
