t= tag supports \n and \t

--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -11,11 +11,8 @@ TBD there should be a limit on the number of inspector windows open, to prevent
 accidentally opening thousand windows with objects of identical names
 TODO: Need display string option to turn off module labels
 TODO: need <Copy> icon on module output window toolbars
-TODO: treeview into eacgh object inspector!
+TODO: treeview into each object inspector!
 TODO: BUSY cursor!!! at network setup, callfinish, etc
-TODO: bubble(): show it in all ancestor modules too (maybe text prefixed with
-      submodule name)
-FIXME: "t=one\ntwo\nthree" doesn't work as expected! (prints literal "\n")
 
 2004-04-20  Andras Varga
 
