--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-13  Andras Varga
+
+	* ned.lex: recognize hex numbers as INTCONSTANT
+
 2004-03-22  ------ omnetpp-3.0a3 released ------
 
 FIXME: input() with expression as default value is handled wrong
