--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -16,6 +16,9 @@ TODO: BUSY cursor!!! at network setup, callfinish, etc
 TODO: needed function: "express run until next event in this module"
 TODO: needed new mode: express run for other modules, fast/normal for this module
 FIXME: container inspector listboxes: always prints "0 objects"
+FIXME: "r=" bug: if I also have "q=queue" or "t=some text" tags, the circle 
+is no longer centered around the icon
+
 
 2004-04-20  Andras Varga
 
