--- a/src/scalars/TODO
+++ b/src/scalars/TODO
@@ -12,11 +12,12 @@ Implement selection sets:
 Matching: do SUBSTRING search by default, and have a checkbox to select 
 full string search
 
-Toolbar icons
+Display basic statistics of variables displayed: mean, stddev
 
-Display basic statistics of variables displayed: mean, stddev, maybe histogram?
+Draw histogram?
 
 Filter: values between [...] and [...]
 
 Chart properties dialog: save/load&apply chart properties (can be implemented 
 with a Tcl array)
+
