--- a/msvc/appwizard/ChangeLog
+++ b/msvc/appwizard/ChangeLog
@@ -1,3 +1,5 @@
+2004-05-15  ------ omnetpp-3.0a4 released ------
+
 2004-03-22  ------ omnetpp-3.0a3 released ------
 
 2004-03-03  ------ omnetpp-3.0a2 released ------
