--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2004-05-15  ------ omnetpp-3.0a4 released ------
+
 2004-03-26  Andras Varga
 
 	* filemgrs.h: (patch from Johnny Lai  <johnny.lai@eng.monash.edu.au>):
