--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,5 @@
+2004-05-15  ------ omnetpp-3.0a4 released ------
+
 Remaining issue: gate directions not observed in Conn Props dialog.
 when submodule has random placement, strange thing happens after OK'ing Props dialog
 GNED not compatible with new Tkenv mode of using "i=" and "b=" together
