--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,5 +1,7 @@
+2004-05-15  ------ omnetpp-3.0a4 released ------
+
 FIXME: cStdDev: info() should print mean(), stdDev() too!
-FIXME: setTagArg("t",0,"erwrw,rtt") --> "invalid position"!!! arg cannot contain comma?
+FIXME: setTagArg("t", 0, "foo,bar") --> "invalid position"! (arg cannot contain comma)
 
 2004-04-16  Andras Varga
 
