--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2004-05-15  ------ omnetpp-3.0a4 released ------
+
 2004-05-15  Andras Varga
 
 	* opp_neddoc.in: prefer ImageMagick's convert to Ghostscript when
